--- a/Data/data_access.ipynb
+++ b/Data/data_access.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -84,35 +84,222 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "统一社会信用代码中的数字和字母具有特定的指代意义，它们共同组成了法人和其他组织的“数字身份证”。以下是统一社会信用代码中数字和字母的指代意义：\n",
+    "\n",
+    "- 登记管理部门代码（第1位）：\n",
+    "使用阿拉伯数字或英文字母表示。\n",
+    "例如，机构编制、民政、工商等登记管理部门分别使用不同的代码来表示。\n",
+    "\n",
+    "- 机构类别代码（第2位）：\n",
+    "使用阿拉伯数字或英文字母表示。\n",
+    "登记管理部门根据管理职能，确定在本部门登记的机构类别编码。\n",
+    "例如，在工商部门，1可能代表企业，2代表个体工商户，3代表农民专业合作社。\n",
+    "\n",
+    "- 登记管理机关**行政区划码**（**第3-8位**）：\n",
+    "使用阿拉伯数字表示。\n",
+    "体现法人和其他组织注册登记及其登记管理机关所在地。\n",
+    "参照《中华人民共和国行政区划代码》进行编码。\n",
+    "\n",
+    "- 主体标识码（第9-17位）：\n",
+    "也称为组织机构代码，使用阿拉伯数字或英文字母表示。\n",
+    "参照《全国组织机构代码编制规则》进行编码。\n",
+    "\n",
+    "- 校验码（第18位）：\n",
+    "使用阿拉伯数字或英文字母表示。\n",
+    "由系统自动生成，用于校验统一社会信用代码的有效性。"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>机构ID</th>\n",
+       "      <th>机构编码</th>\n",
+       "      <th>统一社会信用代码</th>\n",
+       "      <th>agency</th>\n",
+       "      <th>机构类型</th>\n",
+       "      <th>报告年度</th>\n",
+       "      <th>报告名称</th>\n",
+       "      <th>文件类型</th>\n",
+       "      <th>loc_code</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>qy318533C2E67709AA2108E2F383178F0A</td>\n",
+       "      <td>E0001H235010001</td>\n",
+       "      <td>913500007775300512</td>\n",
+       "      <td>福建省农村信用社联合社</td>\n",
+       "      <td>农村信用社</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>福建省农村信用社联合社-社会责任报告-2013.pdf</td>\n",
+       "      <td>.pdf</td>\n",
+       "      <td>350000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>qy318533C2E67709AA2108E2F383178F0A</td>\n",
+       "      <td>E0001H235010001</td>\n",
+       "      <td>913500007775300512</td>\n",
+       "      <td>福建省农村信用社联合社</td>\n",
+       "      <td>农村信用社</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>福建省农村信用社联合社-社会责任报告-2014.pdf</td>\n",
+       "      <td>.pdf</td>\n",
+       "      <td>350000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>qy318533C2E67709AA2108E2F383178F0A</td>\n",
+       "      <td>E0001H235010001</td>\n",
+       "      <td>913500007775300512</td>\n",
+       "      <td>福建省农村信用社联合社</td>\n",
+       "      <td>农村信用社</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>福建省农村信用社联合社-社会责任报告-2017.pdf</td>\n",
+       "      <td>.pdf</td>\n",
+       "      <td>350000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>qy318533C2E67709AA2108E2F383178F0A</td>\n",
+       "      <td>E0001H235010001</td>\n",
+       "      <td>913500007775300512</td>\n",
+       "      <td>福建省农村信用社联合社</td>\n",
+       "      <td>农村信用社</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>福建省农村信用社联合社-社会责任报告-2018.docx</td>\n",
+       "      <td>.docx</td>\n",
+       "      <td>350000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>qy318533C2E67709AA2108E2F383178F0A</td>\n",
+       "      <td>E0001H235010001</td>\n",
+       "      <td>913500007775300512</td>\n",
+       "      <td>福建省农村信用社联合社</td>\n",
+       "      <td>农村信用社</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>福建省农村信用社联合社-社会责任报告-2019.pdf</td>\n",
+       "      <td>.pdf</td>\n",
+       "      <td>350000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "0      福建省农村信用社联合社\n",
-       "1      福建省农村信用社联合社\n",
-       "2      福建省农村信用社联合社\n",
-       "3      福建省农村信用社联合社\n",
-       "4      福建省农村信用社联合社\n",
-       "          ...     \n",
-       "879     渤海银行股份有限公司\n",
-       "880     渤海银行股份有限公司\n",
-       "881     渤海银行股份有限公司\n",
-       "882     渤海银行股份有限公司\n",
-       "883     渤海银行股份有限公司\n",
-       "Name: agency, Length: 884, dtype: object"
+       "                                 机构ID             机构编码            统一社会信用代码  \\\n",
+       "0  qy318533C2E67709AA2108E2F383178F0A  E0001H235010001  913500007775300512   \n",
+       "1  qy318533C2E67709AA2108E2F383178F0A  E0001H235010001  913500007775300512   \n",
+       "2  qy318533C2E67709AA2108E2F383178F0A  E0001H235010001  913500007775300512   \n",
+       "3  qy318533C2E67709AA2108E2F383178F0A  E0001H235010001  913500007775300512   \n",
+       "4  qy318533C2E67709AA2108E2F383178F0A  E0001H235010001  913500007775300512   \n",
+       "\n",
+       "        agency   机构类型  报告年度                          报告名称   文件类型 loc_code  \n",
+       "0  福建省农村信用社联合社  农村信用社  2013   福建省农村信用社联合社-社会责任报告-2013.pdf   .pdf   350000  \n",
+       "1  福建省农村信用社联合社  农村信用社  2014   福建省农村信用社联合社-社会责任报告-2014.pdf   .pdf   350000  \n",
+       "2  福建省农村信用社联合社  农村信用社  2017   福建省农村信用社联合社-社会责任报告-2017.pdf   .pdf   350000  \n",
+       "3  福建省农村信用社联合社  农村信用社  2018  福建省农村信用社联合社-社会责任报告-2018.docx  .docx   350000  \n",
+       "4  福建省农村信用社联合社  农村信用社  2019   福建省农村信用社联合社-社会责任报告-2019.pdf   .pdf   350000  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df= df.rename(columns={'机构名称':'agency'})\n",
-    "df.agency"
+    "df['loc_code'] = [c[2:8] for c in list(df['统一社会信用代码'])]\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "中国的行政区划代码一般采用6位数字表示，前两位表示省份、自治区、直辖市或特别行政区，中间两位表示城市或地区，后两位表示县、市辖区或县级市。了解这一规律也有助于更好地理解和使用行政区划代码。\n",
+    "\n",
+    "\n",
+    "- https://github.com/modood/Administrative-divisions-of-China/tree/master "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (3381147516.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn [16], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    npm install china-area-data\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pyecharts import options as opts  \n",
+    "from pyecharts.charts import Geo  \n",
+    "from pyecharts.globals import ChartType, SymbolType  \n",
+    "  \n",
+    "# 假设你已经有了一个行政区划码与对应坐标的映射  \n",
+    "# 这里以北京市为例，行政区划码为110000，经纬度为北京的大致中心位置  \n",
+    "location_data = {  \n",
+    "    '110000': (116.407526, 39.90403)  # 经度, 纬度  \n",
+    "}  \n",
+    "  \n",
+    "# 创建Geo地图对象  \n",
+    "geo = Geo()  \n",
+    "geo.add_schema(maptype=\"china\")  # 添加中国地图  \n",
+    "  \n",
+    "# 假设我们要查询的行政区划码是110000（北京市）  \n",
+    "target_code = '110000'  \n",
+    "if target_code in location_data:  \n",
+    "    # 添加坐标点  \n",
+    "    geo.add_coordinate(target_code, location_data[target_code][0], location_data[target_code][1])  \n",
+    "      \n",
+    "    # 在地图上标出该点  \n",
+    "    geo.add(  \n",
+    "        \"Location\",  \n",
+    "        [(target_code, 1)],  # 使用行政区划码作为数据点名称，数值1表示大小或权重，可根据需要调整  \n",
+    "        type_=ChartType.EFFECT_SCATTER,  # 使用带有涟漪特效动画的散点图  \n",
+    "    )  \n",
+    "      \n",
+    "    # 设置视觉映射组件（这里主要用于展示点的颜色和大小，但在这个例子中不是必需的）  \n",
+    "    geo.set_series_opts(  \n",
+    "        label_opts=opts.LabelOpts(is_show=False),  # 不显示标签  \n",
+    "        symbol_size=20,  # 点的大小  \n",
+    "    )  \n",
+    "  \n",
+    "# 渲染地图  \n",
+    "geo.render(\"geo_map.html\")  # 生成HTML文件，可以在浏览器中查看\n"
    ]
   }
  ],
