--- a/Data/data_access.ipynb
+++ b/Data/data_access.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
        "      <th>机构ID</th>\n",
        "      <th>机构编码</th>\n",
        "      <th>统一社会信用代码</th>\n",
-       "      <th>agency</th>\n",
+       "      <th>机构名称</th>\n",
        "      <th>机构类型</th>\n",
        "      <th>报告年度</th>\n",
        "      <th>报告名称</th>\n",
@@ -222,7 +222,7 @@
        "3  qy318533C2E67709AA2108E2F383178F0A  E0001H235010001  913500007775300512   \n",
        "4  qy318533C2E67709AA2108E2F383178F0A  E0001H235010001  913500007775300512   \n",
        "\n",
-       "        agency   机构类型  报告年度                          报告名称   文件类型 loc_code  \n",
+       "          机构名称   机构类型  报告年度                          报告名称   文件类型 loc_code  \n",
        "0  福建省农村信用社联合社  农村信用社  2013   福建省农村信用社联合社-社会责任报告-2013.pdf   .pdf   350000  \n",
        "1  福建省农村信用社联合社  农村信用社  2014   福建省农村信用社联合社-社会责任报告-2014.pdf   .pdf   350000  \n",
        "2  福建省农村信用社联合社  农村信用社  2017   福建省农村信用社联合社-社会责任报告-2017.pdf   .pdf   350000  \n",
@@ -230,7 +230,7 @@
        "4  福建省农村信用社联合社  农村信用社  2019   福建省农村信用社联合社-社会责任报告-2019.pdf   .pdf   350000  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,6 +248,104 @@
     "\n",
     "\n",
     "- https://github.com/modood/Administrative-divisions-of-China/tree/master "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'code': '140423', 'name': '襄垣县', 'cityCode': '1404', 'provinceCode': '14'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "area_code = '140423'\n",
+    "\n",
+    "# load the areas.json and retreval information where the corresponding code is equal to area_code\n",
+    "import json\n",
+    "\n",
+    "# Specify the file path\n",
+    "file_path = 'divisionsofChina/dist/areas.json'\n",
+    "\n",
+    "# Load the JSON file\n",
+    "with open(file_path, 'r') as file:\n",
+    "    areas_data = json.load(file)\n",
+    "\n",
+    "# Retrieve information where the corresponding code is equal to area_code\n",
+    "matching_areas = [area for area in areas_data if area['code'] == area_code]\n",
+    "\n",
+    "# Print the matching areas\n",
+    "for area in matching_areas:\n",
+    "    print(area)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load a few json data\n",
+    "import json\n",
+    "\n",
+    "# Specify the file paths\n",
+    "file_paths = ['divisionsofChina/dist/provinces.json', 'divisionsofChina/dist/cities.json', 'divisionsofChina/dist/areas.json']\n",
+    "\n",
+    "# Load the JSON files\n",
+    "areainfo = []\n",
+    "for file_path in file_paths:\n",
+    "    with open(file_path, 'r') as file:\n",
+    "        json_data = json.load(file)\n",
+    "        areainfo.append(json_data)\n",
+    "\n",
+    "# Process the loaded data\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'福建省'"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "def get_location(area_code, areainfo):\n",
+    "    address = ''\n",
+    "    p, c, a = area_code[:2], area_code[2:4], area_code[4:]\n",
+    "    try:\n",
+    "        address += [area for area in areainfo[0] if area['code'] == p][0]['name']\n",
+    "    except IndexError:\n",
+    "        pass\n",
+    "    try:\n",
+    "        if c != '00':\n",
+    "            address += [area for area in areainfo[1] if area['code'] == p+c][0]['name']\n",
+    "    except IndexError:\n",
+    "        pass\n",
+    "    try:\n",
+    "        if a != '00':\n",
+    "            address += [area for area in areainfo[2] if area['code'] == p+c+a][0]['name']\n",
+    "    except IndexError:\n",
+    "        pass\n",
+    "    return address\n",
+    "\n",
+    "area_code = '140423'\n",
+    "area_code = '350025'\n",
+    "get_location(area_code, areainfo)"
    ]
   },
   {
