--- a/Data/data_access.ipynb
+++ b/Data/data_access.ipynb
@@ -4,11 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Tables in Database - incfinance\n",
+    "## Tables in Database - incfinance\n",
     "\n",
     "- banking_social_response_report\n",
     "- inc_policy_all\n",
-    "- inc_region_report_all"
+    "- inc_region_report_all\n",
+    "\n"
    ]
   },
   {
@@ -45,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,16 +309,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'福建省'"
+       "'山西省长治市襄垣县'"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,7 +345,7 @@
     "    return address\n",
     "\n",
     "area_code = '140423'\n",
-    "area_code = '350025'\n",
+    "#area_code = '350025'\n",
     "get_location(area_code, areainfo)"
    ]
   },
